--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "engines": {
-     "node": "16.x"
+    "node": "16.x"
   },
   "scripts": {
+    "tsc": "tsc",
     "start": "node dist/server.js",
     "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +26,8 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "mustache-express": "^1.3.2"
+    "mustache-express": "^1.3.2",
+    "typescript": "^4.6.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
