heroku setup - add tsc

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "tsc": "tsc",
     "start": "node dist/server.js",
-    "postinstall": "tsc && copyfiles -u 1 src/**/*.mustache dist/",
+    "postinstall": "npm run tsctsc && copyfiles -u 1 src/**/*.mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,mustache src/server.ts"
   },
