--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "tsc": "tsc",
     "start": "node dist/server.js",
-    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*.mustache dist/",
+    "postinstall": "npm run tsc && copyfiles -u 1 src/**/*mustache dist/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon -e ts,mustache src/server.ts"
   },
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/mustache-express": "^1.2.1",
-    "@types/node": "^17.0.31"
+    "@types/node": "^17.0.31",
+    "copyfiles": "^2.4.1"
   }
 }
